# sfml_clion_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
